@@ -13,8 +13,8 @@ Author: Kenneth Benoit [aut, cre],
     Kohei Watanabe [ctb],
     Benjamin Lauderdale [ctb]
 Maintainer: Kenneth Benoit <kbenoit@lse.ac.uk>
-Version: 0.9.5-17
-Date: 2016-04-12
+Version: 0.9.5-19
+Date: 2016-04-19
 Description: A fast, flexible toolset for for the management, processing, and
     quantitative analysis of textual data in R.
 License: GPL-3
@@ -54,9 +54,9 @@ VignetteBuilder: knitr
 Collate:
     'RcppExports.R'
     'dictionaries.R'
+    'corpus.R'
     'collocations.R'
     'converters.R'
-    'corpus.R'
     'dataDocs.R'
     'describe-texts.R'
     'dfm-classes.R'
@@ -86,4 +86,5 @@ Collate:
     'tokenize.R'
     'tokenize_outtakes.R'
     'wordstem.R'
+    'zzz.R'
 RoxygenNote: 5.0.1
