@@ -11,6 +11,7 @@ S3method(as.DocumentTermMatrix,dfm)
 S3method(as.matrix,similMatrix)
 S3method(as.wfm,dfm)
 S3method(c,corpus)
+S3method(cbind,dfm)
 S3method(changeunits,corpus)
 S3method(collocations,character)
 S3method(collocations,corpus)
@@ -69,6 +70,7 @@ S3method(print,textmodel_wordscores_fitted)
 S3method(print,textmodel_wordscores_predicted)
 S3method(print,tokenizedTexts)
 S3method(quantedaformat2dtm,dfm)
+S3method(rbind,dfm)
 S3method(readability,character)
 S3method(readability,corpus)
 S3method(sample,corpus)
@@ -120,13 +122,11 @@ export(applyDictionary)
 export(as.DocumentTermMatrix)
 export(as.dfm)
 export(as.wfm)
-export(cbind.dfm)
 export(changeunits)
 export(collocations)
 export(convert)
 export(corpus)
 export(describeTexts)
-export(df)
 export(dfm)
 export(dfm2ldaformat)
 export(dictionary)
@@ -192,7 +192,6 @@ exportMethods(as.data.frame)
 exportMethods(as.matrix)
 exportMethods(colMeans)
 exportMethods(colSums)
-exportMethods(df)
 exportMethods(head)
 exportMethods(phrasetotoken)
 exportMethods(print)
