@@ -1,3 +1,4 @@
+#' @include corpus.R
 #' @include dictionaries.R
 NULL
 
