@@ -1,0 +1,3 @@
+.onAttach <- function(...) {
+    packageStartupMessage("quanteda version ", as.character(utils::packageVersion("quanteda")), "\n")
+}
