@@ -26,7 +26,7 @@ last/first number of documents of x.}
 \item{nfeature}{the number of features to return, where the resulting object
 will contain the first \code{ncol} features}
 
-\item{...}{unused}
+\item{...}{not used}
 }
 \value{
 A \link{dfm-class} class object corresponding to the subset defined
